# whipr

./: CLAUDE.md  SWIFT_MIGRATION_SPEC.md  package-lock.json  package.json
.github/workflows/: release.yml
gnome-extension/whispr-overlay@greenuni/: extension.js
src/: App.svelte  Hud.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  com.whipr.app.metainfo.xml  tauri.conf.json  tauri.conf.windows.json  tauri.macos.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app_tray.rs  cli.rs  commands.rs  hud.rs  main.rs  overlay.rs  settings.rs  state.rs  tray.rs  types.rs
src-tauri/src/core/: audio.rs  audio_import.rs  automation.rs  autostart.rs  embedding.rs  hotkeys.rs  macos_permissions.rs  mod.rs  models.rs  runtime.rs  storage.rs  summary.rs  transcription.rs
src/lib/: api.ts  hotkeys.ts
src/lib/components/: HotkeyInput.svelte  Onboarding.svelte  RecordingHud.svelte
